Fix overlapping sidebar

--- a/components/artwork_filter/index.styl
+++ b/components/artwork_filter/index.styl
@@ -17,10 +17,8 @@ sidebar-width = 26%
 .artwork-filter
   padding 20px 0
 .artwork-columns-section
-  width 100%
+  width (100% - sidebar-width)
   float right
-  padding-left sidebar-width
-  margin-left -@padding-left
   > .artwork-columns
     margin-bottom 40px
   h2
@@ -29,7 +27,6 @@ sidebar-width = 26%
 .artwork-filter
   width sidebar-width
   float left
-  z-index 1
   padding-right 40px
   section
     margin 20px 0
